--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "f2e250fa",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,8 @@
     "import tensorflow as tf\n",
     "from tensorflow.keras import layers, models, datasets\n",
     "import numpy as np \n",
-    "import matplotlib.pyplot as plt "
+    "import matplotlib.pyplot as plt \n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler"
    ]
   },
   {
@@ -432,6 +433,61 @@
     "    plt.axis('off')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7f7e891",
+   "metadata": {},
+   "source": [
+    "# CIFAR-10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e3b320b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "db42ab9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'x_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      1\u001b[39m class_names = [\u001b[33m'\u001b[39m\u001b[33mairplane\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mcar\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mbird\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mcat\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mdeer\u001b[39m\u001b[33m'\u001b[39m, \n\u001b[32m      2\u001b[39m                \u001b[33m'\u001b[39m\u001b[33mdog\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mfrog\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mhorse\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mship\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mtruck\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m x_train = \u001b[43mx_train\u001b[49m.astype(\u001b[33m'\u001b[39m\u001b[33mfloat32\u001b[39m\u001b[33m'\u001b[39m) / \u001b[32m255.0\u001b[39m\n\u001b[32m      6\u001b[39m x_test = x_test.astype(\u001b[33m'\u001b[39m\u001b[33mfloat32\u001b[39m\u001b[33m'\u001b[39m) / \u001b[32m255.0\u001b[39m\n\u001b[32m      9\u001b[39m y_train = tf.keras.utils.to_categorical(y_train, \u001b[32m10\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'x_train' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "class_names = ['airplane', 'car', 'bird', 'cat', 'deer', \n",
+    "               'dog', 'frog', 'horse', 'ship', 'truck']\n",
+    "\n",
+    "\n",
+    "x_train = x_train.astype('float32') / 255.0\n",
+    "x_test = x_test.astype('float32') / 255.0\n",
+    "\n",
+    "\n",
+    "y_train = tf.keras.utils.to_categorical(y_train, 10)\n",
+    "y_test = tf.keras.utils.to_categorical(y_test, 10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96f9ac6b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
