--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "f2e250fa",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,9 @@
     "from tensorflow.keras import layers, models, datasets\n",
     "import numpy as np \n",
     "import matplotlib.pyplot as plt \n",
-    "from sklearn.preprocessing import StandardScaler, MinMaxScaler"
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
+    "import os \n",
+    "import pickle"
    ]
   },
   {
@@ -444,41 +446,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2e3b320b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def unpickle(file):\n",
+    "    with open(file, 'rb') as fo:\n",
+    "        dic = pickle.load(fo, encoding='bytes')\n",
+    "        return dic\n",
+    "    \n",
+    "    \n",
+    "file_data = '../../data/cifar-10-batches-py'\n",
+    "\n",
+    "\n",
+    "\n",
+    "x_train = []\n",
+    "y_train = []\n",
+    "for i in range(1, 6):\n",
+    "    batch = unpickle(os.path.join(file_data, f'data_batch_{i}'))\n",
+    "    x_train.append(batch[b'data'])\n",
+    "    y_train.append(batch[b'labels'])\n",
+    "x_train = np.concatenate(x_train)\n",
+    "y_train = np.concatenate(y_train)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "db42ab9a",
+   "execution_count": 7,
+   "id": "8b364f6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_bach = unpickle(os.path.join(file_data, 'test_batch'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "392e6c35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_test = test_bach[b'data']\n",
+    "y_test = np.array(test_bach[b'labels'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f5cc827b",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'x_train' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      1\u001b[39m class_names = [\u001b[33m'\u001b[39m\u001b[33mairplane\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mcar\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mbird\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mcat\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mdeer\u001b[39m\u001b[33m'\u001b[39m, \n\u001b[32m      2\u001b[39m                \u001b[33m'\u001b[39m\u001b[33mdog\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mfrog\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mhorse\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mship\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mtruck\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m x_train = \u001b[43mx_train\u001b[49m.astype(\u001b[33m'\u001b[39m\u001b[33mfloat32\u001b[39m\u001b[33m'\u001b[39m) / \u001b[32m255.0\u001b[39m\n\u001b[32m      6\u001b[39m x_test = x_test.astype(\u001b[33m'\u001b[39m\u001b[33mfloat32\u001b[39m\u001b[33m'\u001b[39m) / \u001b[32m255.0\u001b[39m\n\u001b[32m      9\u001b[39m y_train = tf.keras.utils.to_categorical(y_train, \u001b[32m10\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'x_train' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "array([3, 8, 8, ..., 5, 1, 7])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "y_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "db42ab9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class_names = ['airplane', 'car', 'bird', 'cat', 'deer', \n",
     "               'dog', 'frog', 'horse', 'ship', 'truck']\n",
-    "\n",
-    "\n",
-    "x_train = x_train.astype('float32') / 255.0\n",
-    "x_test = x_test.astype('float32') / 255.0\n",
-    "\n",
-    "\n",
-    "y_train = tf.keras.utils.to_categorical(y_train, 10)\n",
-    "y_test = tf.keras.utils.to_categorical(y_test, 10)\n"
+    "\n"
    ]
   },
   {
