feat:🔥 fit the model

--- a/notebook/EEG/GELU.ipynb
+++ b/notebook/EEG/GELU.ipynb
@@ -217,7 +217,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data-analysis-_rtLvpYT-py3.12",
+   "display_name": "backend-_rtLvpYT-py3.12",
    "language": "python",
    "name": "python3"
   },
