--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "2e3b320b",
    "metadata": {},
    "outputs": [],
@@ -464,6 +464,7 @@
     "x_train = []\n",
     "y_train = []\n",
     "for i in range(1, 6):\n",
+    "    \n",
     "    batch = unpickle(os.path.join(file_data, f'data_batch_{i}'))\n",
     "    x_train.append(batch[b'data'])\n",
     "    y_train.append(batch[b'labels'])\n",
@@ -473,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "8b364f6d",
    "metadata": {},
    "outputs": [],
@@ -483,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "392e6c35",
    "metadata": {},
    "outputs": [],
@@ -621,13 +622,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " "
+    "model = models.Sequential([\n",
+    "    layers.Conv2D(32, (3, 3), activation='relu', padding='same', input_shape=(32, 32, 3)),\n",
+    "    layers.BatchNormalization(),\n",
+    "    layers.Conv2D(32, (3, 3), activation='relu', padding='same'),\n",
+    "    layers.BatchNormalization(),\n",
+    "    layers.MaxPooling2D((2, 2)),\n",
+    "    layers.Dropout(0.25),\n",
+    "    layers.Conv2D(64, (3, 3), activation='relu', padding='same'),\n",
+    "    layers.BatchNormalization(),\n",
+    "    layers.Conv2D(64, (3, 3), activation='relu', padding='same'),\n",
+    "    layers.BatchNormalization(),\n",
+    "    layers.MaxPooling2D((2, 2)),\n",
+    "    layers.Dropout(0.25),\n",
+    "    layers.Flatten(),\n",
+    "    layers.Dense(512, activation='relu'),\n",
+    "    layers.BatchNormalization(),\n",
+    "    layers.Dropout(0.5),\n",
+    "    layers.Dense(10, activation='softmax')\n",
+    "])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "267bff1f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "backend-_rtLvpYT-py3.12",
+   "display_name": "backend-_rtLvpYT-py3.10",
    "language": "python",
    "name": "python3"
   },
@@ -641,7 +668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
