feat:🚀 Updata the model

--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "267bff1f",
    "metadata": {},
    "outputs": [
@@ -712,21 +712,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "2c8ea7fd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile()"
+    "model.compile(\n",
+    "\toptimizer='adam',\n",
+    "\tloss='categorical_crossentropy',\n",
+    "\tmetrics=['accuracy']\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e100c5b",
+   "id": "12661a30",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "history = model.fit(x_train, y_train, epochs=5, batch_size=64, validation_split=0.2)"
+   ]
   }
  ],
  "metadata": {
