--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "f2e250fa",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,8 @@
     "import matplotlib.pyplot as plt \n",
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
     "import os \n",
-    "import pickle"
+    "import pickle\n",
+    "from typing import Tuple, Optional"
    ]
   },
   {
@@ -446,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "2e3b320b",
    "metadata": {},
    "outputs": [],
@@ -474,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "8b364f6d",
    "metadata": {},
    "outputs": [],
@@ -484,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "392e6c35",
    "metadata": {},
    "outputs": [],
@@ -495,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "f5cc827b",
    "metadata": {},
    "outputs": [
@@ -505,7 +506,7 @@
        "array([3, 8, 8, ..., 5, 1, 7])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "d403b9e6",
    "metadata": {},
    "outputs": [],
@@ -527,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "9e75c27f",
    "metadata": {},
    "outputs": [],
@@ -538,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "29e23847",
    "metadata": {},
    "outputs": [],
@@ -549,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "17d5c5d8",
    "metadata": {},
    "outputs": [
@@ -565,7 +566,7 @@
        "       [0., 1., 0., ..., 0., 0., 0.]], dtype=float32)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "db42ab9a",
    "metadata": {},
    "outputs": [],
@@ -588,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "96f9ac6b",
    "metadata": {},
    "outputs": [
@@ -617,10 +618,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "9740a6e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-07-02 07:12:24.890876: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2025-07-02 07:12:25.533140: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1956] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "Skipping registering GPU devices...\n"
+     ]
+    }
+   ],
    "source": [
     "model = models.Sequential([\n",
     "    layers.Conv2D(32, (3, 3), activation='relu', padding='same', input_shape=(32, 32, 3)),\n",
@@ -645,7 +656,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "id": "eef360ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Conv2D:\n",
+    "    def __init__(self)-> None:..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "267bff1f",
    "metadata": {},
    "outputs": [
