feat:🚀 Updata the model

--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -656,13 +656,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "eef360ca",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Conv2D:\n",
-    "    def __init__(self)-> None:..."
+    "    def __init__(self, filters: int, kernel_size: Tuple[int, int], activation: str = \"relu\", padding: str = 'same')-> None:..."
    ]
   },
   {
