--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -656,13 +656,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "eef360ca",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Conv2D:\n",
-    "    def __init__(self, filters: int, kernel_size: Tuple[int, int], activation: str = \"relu\", padding: str = 'same')-> None:..."
+    "    def __init__(self, filters: int, kernel_size: Tuple[int, int], activation: str = \"relu\", padding: str = 'same')-> None:\n",
+    "        self.filters = filters\n",
+    "        self.kernel_size = kernel_size\n",
+    "        self.activation = activation\n",
+    "        self.padding = padding\n",
+    "        self.weights = None\n",
+    "        self.bias = None\n",
+    "        \n",
+    "        \n",
+    "    def initialize_weights(self, input_shape: Tuple[int, int, int]):\n",
+    "        fan_in = np.prod(self.kernel_size) * input_shape[2]\n",
+    "        fan_out = np.prod(self.kernel_size) * self.filters\n",
+    "        limit = np.sqrt(6 / (fan_in + fan_out))\n",
+    "        self.weights = np.random.uniform9(-limit, limit, (self.kernel_size[0], self.kernel_size[1], input_shape[2], self.filters))"
    ]
   },
   {
