feat:🚀 Updata the model

--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -662,7 +662,7 @@
    "outputs": [],
    "source": [
     "class Conv2D:\n",
-    "    def __init__(self, filters: int, kernel_size: Tuple[int, int], activation: str = \"relu\", padding: str = 'same')-> None:\n",
+    "    def __init__(self, filters: int, kernel_size: Tuple[int, int], activation: str = \"relu\", padding: str = 'same'):\n",
     "        self.filters = filters\n",
     "        self.kernel_size = kernel_size\n",
     "        self.activation = activation\n",
@@ -675,7 +675,8 @@
     "        fan_in = np.prod(self.kernel_size) * input_shape[2]\n",
     "        fan_out = np.prod(self.kernel_size) * self.filters\n",
     "        limit = np.sqrt(6 / (fan_in + fan_out))\n",
-    "        self.weights = np.random.uniform9(-limit, limit, (self.kernel_size[0], self.kernel_size[1], input_shape[2], self.filters))"
+    "        self.weights = np.random.uniform9(-limit, limit, (self.kernel_size[0], self.kernel_size[1], input_shape[2], self.filters))\n",
+    "        self.bias = np.zeros((self.filters))"
    ]
   },
   {
