--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -675,7 +675,7 @@
     "        fan_in = np.prod(self.kernel_size) * input_shape[2]\n",
     "        fan_out = np.prod(self.kernel_size) * self.filters\n",
     "        limit = np.sqrt(6 / (fan_in + fan_out))\n",
-    "        self.weights = np.random.uniform9(-limit, limit, (self.kernel_size[0], self.kernel_size[1], input_shape[2], self.filters))\n",
+    "        self.weights = np.random.uniform(-limit, limit, (self.kernel_size[0], self.kernel_size[1], input_shape[2], self.filters))\n",
     "        self.bias = np.zeros((self.filters))"
    ]
   },
