feat:🚀 Updata the model

--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "f2e250fa",
    "metadata": {},
    "outputs": [],
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "eef360ca",
    "metadata": {},
    "outputs": [],
@@ -671,13 +671,58 @@
     "        self.bias = None\n",
     "        \n",
     "        \n",
-    "    def initialize_weights(self, input_shape: Tuple[int, int, int]):\n",
+    "    def initialize_weights(self, input_shape: Tuple[int, int, int]):\t\n",
     "        fan_in = np.prod(self.kernel_size) * input_shape[2]\n",
     "        fan_out = np.prod(self.kernel_size) * self.filters\n",
     "        limit = np.sqrt(6 / (fan_in + fan_out))\n",
     "        self.weights = np.random.uniform(-limit, limit, (self.kernel_size[0], self.kernel_size[1], input_shape[2], self.filters))\n",
-    "        self.bias = np.zeros((self.filters))"
+    "        self.bias = np.zeros((self.filters))\n",
+    "        \n",
+    "    def forward(self, x: np.ndarray)-> np.array:\n",
+    "        \n",
+    "        batch_size, height, width, channels = x.shape \n",
+    "        \n",
+    "        if self.weights is None:\n",
+    "            self.initialize_weights((height, width, channels))\n",
+    "            \n",
+    "            \n",
+    "        if self.padding == 'same':\n",
+    "            pad_h = self.kernel_size[0] // 2\n",
+    "            pad_w = self.kernel_size[1] // 2\n",
+    "            x_padded = np.pad(x, ((0,0), (pad_h, pad_h), (pad_w, pad_w), (0,0)), mode='constant')\n",
+    "        else:\n",
+    "            x_padded = x      \n",
+    "        \n",
+    "        \n",
+    "        out_height = x_padded.shaep[1] - self.kernel_size[0] + 1\n",
+    "        \n",
+    "        out_weight = x_padded.shaep[2] - self.kernel_size[1] + 1\n",
+    "        \n",
+    "        output = np.zeros((batch_size, out_height, out_weight, self.filters))\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        for i in range(out_height):\n",
+    "            for j in range(out_weight):\n",
+    "                for f in range(self.filters):\n",
+    "                    region = x_padded[:, i:i+self.kernel_size[0],j:j+self.kernel_size[1], :]\n",
+    "                    output[:, i, j, f] = np.sum(region * self.weights[:, :, :, f], axis=(1, 2, 3)) + self.bias[f]\n",
+    "                    \n",
+    "                    \n",
+    "        if self.activation == 'relu':\n",
+    "            output = np.maximum(0, output)\n",
+    "            \n",
+    "        return output\n",
+    "            \n",
+    "            \n",
+    "            "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "589e6968",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
