--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "eef360ca",
    "metadata": {},
    "outputs": [],
@@ -715,8 +715,29 @@
     "            \n",
     "        return output\n",
     "            \n",
+    "class BatchNormalization:\n",
+    "    \n",
+    "    def __init__(self, epsilon: float = 1e-5, momentum: float = 0.99):\n",
+    "        self.epsilon = epsilon\n",
+    "        self.momentum = momentum\n",
+    "        self.gamma = None\n",
+    "        self.beta = None\n",
+    "        self.running_mean = None\n",
+    "        self.running_var = None\n",
+    "        self.training = True\n",
+    "    \n",
+    "    def forward(self, x: np.ndarray)-> np.array:\n",
+    "        if self.gamma is None:\n",
+    "            shape = x.shape[-1 :]\n",
+    "    \n",
+    "            self.gamma = np.ones(shape)\n",
+    "            self.beta = np.zeros(shape)\n",
+    "    \n",
+    "            self.running_mean = np.zeros(shape)\n",
+    "            self.running_var = np.ones(shape)\n",
     "            \n",
-    "            "
+    "            \n",
+    "        if self.training:..."
    ]
   },
   {
