--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "eef360ca",
    "metadata": {},
    "outputs": [],
@@ -737,7 +737,23 @@
     "            self.running_var = np.ones(shape)\n",
     "            \n",
     "            \n",
-    "        if self.training:..."
+    "        if self.training:\n",
+    "            \n",
+    "            batch_mean = np.mean(x, axis=(0, 1, 2), keepdims=True)\n",
+    "            batch_var = np.var(x, axis=(0, 1 ,2), keepdims=True)\n",
+    "            \n",
+    "            self.running_mean = self.momentum * self.running_mean + (1 - self.momentum) * batch_mean.squeeze()\n",
+    "            self.running_var = self.momentum * self.running_var + (1 - self.momentum) * batch_var.squeeze()\n",
+    "            \n",
+    "            \n",
+    "            # Normalize\n",
+    "            \n",
+    "            x_norm = (x - batch_mean) / np.sqrt(batch_var + self.epsilon)\n",
+    "            \n",
+    "        else:\n",
+    "            x_norm = (x - self.running_mean) / np.sqrt(self.running_var + self.epsilon) \n",
+    "            \n",
+    "        return self.gamma * x_norm + self.beta            "
    ]
   },
   {
