--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "f2e250fa",
    "metadata": {},
    "outputs": [],
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "eef360ca",
    "metadata": {},
    "outputs": [],
@@ -753,7 +753,60 @@
     "        else:\n",
     "            x_norm = (x - self.running_mean) / np.sqrt(self.running_var + self.epsilon) \n",
     "            \n",
-    "        return self.gamma * x_norm + self.beta            "
+    "        return self.gamma * x_norm + self.beta\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "class MaxPooling2D:\n",
+    "    def __init__(self, pool_size: Tuple[int, int] = (2, 2)):\n",
+    "        self.pool_size = pool_size\n",
+    "        \n",
+    "        \n",
+    "    def forward(self, x: np.ndarray) -> np.array:\n",
+    "        batch_size, height, width, channels = x.shape\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        out_height = height // self.pool_size[0]\n",
+    "        out_width = width // self.pool_size[1]\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        output = np.zeros((batch_size, out_height, out_width, channels ))\n",
+    "        \n",
+    "        for i in range(out_height):\n",
+    "            for j in range(out_width):\n",
+    "                h_start = i * self.pool_size[0] \n",
+    "                h_end = h_start + self.pool_size[0]\n",
+    "                w_start = j * self.pool_size[1]\n",
+    "                w_end = w_start + self.pool_size[1]\n",
+    "                \n",
+    "                pool_region = x[:, h_start:h_end, w_start: w_end, :]\n",
+    "                \n",
+    "                output[:, i, j, :] = np.max(pool_region, axis=(1,2))\n",
+    "                \n",
+    "                \n",
+    "        return output\n",
+    "    \n",
+    "class Dropout:\n",
+    "    def __init__(self, rate: float): \n",
+    "        self.rate = rate\n",
+    "        self.training = True\n",
+    "        \n",
+    "        \n",
+    "    def forward(self, x: np.ndarray) -> np.ndarray:\n",
+    "        if self.training and self.rate > 0:\n",
+    "            keep_prob = 1 - self.rate\n",
+    "            mask = np.random.binomial(1, keep_prob, size=x.shape) / keep_prob\n",
+    "            return x * mask\n",
+    "        return x\n",
+    "        \n",
+    "\t\t\t\t\n",
+    "\n",
+    "            \n",
+    "            \n",
+    "            "
    ]
   },
   {
