--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -803,7 +803,20 @@
     "        return x\n",
     "        \n",
     "\t\t\t\t\n",
-    "\n",
+    "class Flatten:\n",
+    "    def __init__(self)-> None:\n",
+    "        pass\n",
+    "    \n",
+    "    def forward(self,x: np.ndarray)-> np.array:\n",
+    "        batch_size = x.shape[0]\n",
+    "        return x.reshape(batch_size, -1 )\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "class Dense:\n",
+    "    def __init__(self):\n",
+    "        pass \n",
+    "    \n",
     "            \n",
     "            \n",
     "            "
