--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -814,9 +814,11 @@
     "    \n",
     "    \n",
     "class Dense:\n",
-    "    def __init__(self):\n",
-    "        pass \n",
-    "    \n",
+    "    def __init__(self, units: int, activation: str = 'linear'):\n",
+    "        self.units = units\n",
+    "        self.activation = activation\n",
+    "\t\tself.weight = None\n",
+    "  \t\tself.bias = None\n",
     "            \n",
     "            \n",
     "            "
