feat:🚀 Updatae the Dense model

--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "f2e250fa",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "e1271d5a",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
      "output_type": "stream",
      "text": [
       "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
-      "\u001b[1m11490434/11490434\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 0us/step\n"
+      "11490434/11490434 [==============================] - 3s 0us/step\n"
      ]
     }
    ],
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "eef360ca",
    "metadata": {},
    "outputs": [],
@@ -817,10 +817,35 @@
     "    def __init__(self, units: int, activation: str = 'linear'):\n",
     "        self.units = units\n",
     "        self.activation = activation\n",
-    "\t\tself.weight = None\n",
-    "  \t\tself.bias = None\n",
+    "        self.weights = None\n",
+    "        self.bias = None\n",
+    "        \n",
+    "    def initialize_weights(self, input_dim: int):\n",
+    "        limit = np.sqrt(6 / (input_dim + self.units))\n",
+    "        self.weights = np.random.uniform(-limit , limit, (input_dim, self.units))\n",
+    "        self.bias = np.zeros((self.units))\n",
+    "    \n",
+    "    def forward(self, x: np.ndarray)-> np.array:\n",
+    "        if self.weights is None:\n",
+    "            self.initialize_weights(x.shape[0])\n",
     "            \n",
     "            \n",
+    "        output = np.dot(x, self.weights) + self.bias\n",
+    "        \n",
+    "        \n",
+    "        if self.activation == \"relu\":\n",
+    "            output = np.maximum(0, output)\n",
+    "        \n",
+    "        elif self.activation == 'softmax':\n",
+    "            exp_scores = np.exp(output - np.max(output, axis=1, keepdims=True))\n",
+    "            output = exp_scores / np.sum(exp_scores, axis=1, keepdims=True)    \n",
+    "            \n",
+    "            \n",
+    "        return output\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
     "            "
    ]
   },
