--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -618,45 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "9740a6e3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-07-02 07:12:24.890876: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2025-07-02 07:12:25.533140: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1956] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
-      "Skipping registering GPU devices...\n"
-     ]
-    }
-   ],
-   "source": [
-    "model = models.Sequential([\n",
-    "    layers.Conv2D(32, (3, 3), activation='relu', padding='same', input_shape=(32, 32, 3)),\n",
-    "    layers.BatchNormalization(),\n",
-    "    layers.Conv2D(32, (3, 3), activation='relu', padding='same'),\n",
-    "    layers.BatchNormalization(),\n",
-    "    layers.MaxPooling2D((2, 2)),\n",
-    "    layers.Dropout(0.25),\n",
-    "    layers.Conv2D(64, (3, 3), activation='relu', padding='same'),\n",
-    "    layers.BatchNormalization(),\n",
-    "    layers.Conv2D(64, (3, 3), activation='relu', padding='same'),\n",
-    "    layers.BatchNormalization(),\n",
-    "    layers.MaxPooling2D((2, 2)),\n",
-    "    layers.Dropout(0.25),\n",
-    "    layers.Flatten(),\n",
-    "    layers.Dense(512, activation='relu'),\n",
-    "    layers.BatchNormalization(),\n",
-    "    layers.Dropout(0.5),\n",
-    "    layers.Dense(10, activation='softmax')\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "eef360ca",
    "metadata": {},
    "outputs": [],
@@ -842,7 +804,28 @@
     "            \n",
     "            \n",
     "        return output\n",
-    "    \n",
+    "\n",
+    "class CNN:\n",
+    "    def __init__(self):\n",
+    "        self.layer = [\n",
+    "\t\t\tConv2D(32, (3, 3), activation='relu', padding='same'),\n",
+    "            BatchNormalization(),\n",
+    "            Conv2D(32, (3, 3), activation='relu', padding='same'),\n",
+    "            BatchNormalization(),\n",
+    "            MaxPooling2D((2, 2)),\n",
+    "            Dropout(0.25),\n",
+    "            Conv2D(64, (3, 3), activation='relu', padding='same'),\n",
+    "            BatchNormalization(),\n",
+    "            Conv2D(64, (3, 3), activation='relu', padding='same'),\n",
+    "            BatchNormalization(),\n",
+    "            MaxPooling2D((2, 2)),\n",
+    "            Dropout(0.25),\n",
+    "            Flatten(),\n",
+    "            Dense(512, activation='relu'),\n",
+    "            BatchNormalization(),\n",
+    "            Dropout(0.5),\n",
+    "            Dense(10, activation='softmax')\n",
+    "\t\t]\n",
     "    \n",
     "    \n",
     "    \n",
