--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "eef360ca",
    "metadata": {},
    "outputs": [],
@@ -641,7 +641,7 @@
     "        self.bias = np.zeros((self.filters))\n",
     "        \n",
     "        \n",
-    "    def forward(self, x: np.ndarray)-> np.array:\n",
+    "    def forward(self, x: np.ndarray)-> np.ndarray:\n",
     "        \n",
     "        batch_size, height, width, channels = x.shape \n",
     "        \n",
@@ -688,7 +688,7 @@
     "        self.running_var = None\n",
     "        self.training = True\n",
     "    \n",
-    "    def forward(self, x: np.ndarray)-> np.array:\n",
+    "    def forward(self, x: np.ndarray)-> np.ndarray:\n",
     "        if self.gamma is None:\n",
     "            shape = x.shape[-1 :]\n",
     "    \n",
@@ -724,7 +724,7 @@
     "        self.pool_size = pool_size\n",
     "        \n",
     "        \n",
-    "    def forward(self, x: np.ndarray) -> np.array:\n",
+    "    def forward(self, x: np.ndarray) -> np.ndarray:\n",
     "        batch_size, height, width, channels = x.shape\n",
     "        \n",
     "        \n",
@@ -769,7 +769,7 @@
     "    def __init__(self)-> None:\n",
     "        pass\n",
     "    \n",
-    "    def forward(self,x: np.ndarray)-> np.array:\n",
+    "    def forward(self,x: np.ndarray)-> np.ndarray:\n",
     "        batch_size = x.shape[0]\n",
     "        return x.reshape(batch_size, -1 )\n",
     "    \n",
@@ -787,7 +787,7 @@
     "        self.weights = np.random.uniform(-limit , limit, (input_dim, self.units))\n",
     "        self.bias = np.zeros((self.units))\n",
     "    \n",
-    "    def forward(self, x: np.ndarray)-> np.array:\n",
+    "    def forward(self, x: np.ndarray)-> np.ndarray:\n",
     "        if self.weights is None:\n",
     "            self.initialize_weights(x.shape[0])\n",
     "            \n",
@@ -827,8 +827,9 @@
     "            Dense(10, activation='softmax')\n",
     "\t\t]\n",
     "    \n",
-    "    \n",
-    "    \n",
+    "    def forward(self, x: np.ndarray)-> np.ndarray:\n",
+    "        for layer in self.layer:\n",
+    "            x = layer.forward(x)\n",
     "            "
    ]
   },
