feat:🚀 Done the mode CNN

--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "eef360ca",
    "metadata": {},
    "outputs": [],
@@ -807,7 +807,7 @@
     "\n",
     "class CNN:\n",
     "    def __init__(self):\n",
-    "        self.layer = [\n",
+    "        self.layers = [\n",
     "\t\t\tConv2D(32, (3, 3), activation='relu', padding='same'),\n",
     "            BatchNormalization(),\n",
     "            Conv2D(32, (3, 3), activation='relu', padding='same'),\n",
@@ -828,8 +828,14 @@
     "\t\t]\n",
     "    \n",
     "    def forward(self, x: np.ndarray)-> np.ndarray:\n",
-    "        for layer in self.layer:\n",
+    "        for layer in self.layers:\n",
     "            x = layer.forward(x)\n",
+    "        return x\n",
+    "    \n",
+    "    def set_training(self, training: bool):\n",
+    "        for layer in self.layers:\n",
+    "            if hasattr(layer, 'training'):\n",
+    "                layer.training = training\n",
     "            "
    ]
   },
