feat:🚀 Done the mode CNN

--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8b364f6d",
    "metadata": {},
    "outputs": [],
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "eef360ca",
    "metadata": {},
    "outputs": [],
@@ -804,11 +804,21 @@
     "            \n",
     "            \n",
     "        return output\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "19913363",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "class CNN:\n",
     "    def __init__(self):\n",
     "        self.layers = [\n",
-    "\t\t\tConv2D(32, (3, 3), activation='relu', padding='same'),\n",
+    "            Conv2D(32, (3, 3), activation='relu', padding='same'),\n",
     "            BatchNormalization(),\n",
     "            Conv2D(32, (3, 3), activation='relu', padding='same'),\n",
     "            BatchNormalization(),\n",
@@ -825,9 +835,9 @@
     "            BatchNormalization(),\n",
     "            Dropout(0.5),\n",
     "            Dense(10, activation='softmax')\n",
-    "\t\t]\n",
+    "        ]\n",
     "    \n",
-    "    def forward(self, x: np.ndarray)-> np.ndarray:\n",
+    "    def forward(self, x: np.ndarray) -> np.ndarray:\n",
     "        for layer in self.layers:\n",
     "            x = layer.forward(x)\n",
     "        return x\n",
@@ -836,74 +846,47 @@
     "        for layer in self.layers:\n",
     "            if hasattr(layer, 'training'):\n",
     "                layer.training = training\n",
-    "            "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "267bff1f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential\"\n",
-      "_________________________________________________________________\n",
-      " Layer (type)                Output Shape              Param #   \n",
-      "=================================================================\n",
-      " conv2d (Conv2D)             (None, 32, 32, 32)        896       \n",
-      "                                                                 \n",
-      " batch_normalization (BatchN  (None, 32, 32, 32)       128       \n",
-      " ormalization)                                                   \n",
-      "                                                                 \n",
-      " conv2d_1 (Conv2D)           (None, 32, 32, 32)        9248      \n",
-      "                                                                 \n",
-      " batch_normalization_1 (Batc  (None, 32, 32, 32)       128       \n",
-      " hNormalization)                                                 \n",
-      "                                                                 \n",
-      " max_pooling2d (MaxPooling2D  (None, 16, 16, 32)       0         \n",
-      " )                                                               \n",
-      "                                                                 \n",
-      " dropout (Dropout)           (None, 16, 16, 32)        0         \n",
-      "                                                                 \n",
-      " conv2d_2 (Conv2D)           (None, 16, 16, 64)        18496     \n",
-      "                                                                 \n",
-      " batch_normalization_2 (Batc  (None, 16, 16, 64)       256       \n",
-      " hNormalization)                                                 \n",
-      "                                                                 \n",
-      " conv2d_3 (Conv2D)           (None, 16, 16, 64)        36928     \n",
-      "                                                                 \n",
-      " batch_normalization_3 (Batc  (None, 16, 16, 64)       256       \n",
-      " hNormalization)                                                 \n",
-      "                                                                 \n",
-      " max_pooling2d_1 (MaxPooling  (None, 8, 8, 64)         0         \n",
-      " 2D)                                                             \n",
-      "                                                                 \n",
-      " dropout_1 (Dropout)         (None, 8, 8, 64)          0         \n",
-      "                                                                 \n",
-      " flatten (Flatten)           (None, 4096)              0         \n",
-      "                                                                 \n",
-      " dense (Dense)               (None, 512)               2097664   \n",
-      "                                                                 \n",
-      " batch_normalization_4 (Batc  (None, 512)              2048      \n",
-      " hNormalization)                                                 \n",
-      "                                                                 \n",
-      " dropout_2 (Dropout)         (None, 512)               0         \n",
-      "                                                                 \n",
-      " dense_1 (Dense)             (None, 10)                5130      \n",
-      "                                                                 \n",
-      "=================================================================\n",
-      "Total params: 2,171,178\n",
-      "Trainable params: 2,169,770\n",
-      "Non-trainable params: 1,408\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
-    "model.summary()"
+    "    \n",
+    "    def compute_loss(self, y_true: np.ndarray, y_pred: np.ndarray) -> float:\n",
+    "        \"\"\"Compute categorical cross-entropy loss\"\"\"\n",
+    "        # Clip predictions to prevent log(0)\n",
+    "        y_pred = np.clip(y_pred, 1e-15, 1 - 1e-15)\n",
+    "        return -np.mean(np.sum(y_true * np.log(y_pred), axis=1))\n",
+    "    \n",
+    "    def compute_accuracy(self, y_true: np.ndarray, y_pred: np.ndarray) -> float:\n",
+    "        \"\"\"Compute classification accuracy\"\"\"\n",
+    "        y_true_labels = np.argmax(y_true, axis=1)\n",
+    "        y_pred_labels = np.argmax(y_pred, axis=1)\n",
+    "        return np.mean(y_true_labels == y_pred_labels)\n",
+    "    \n",
+    "    def train_step(self, x: np.ndarray, y: np.ndarray) -> Tuple[float, float]:\n",
+    "        \"\"\"Perform one training step (forward pass only for now)\"\"\"\n",
+    "        self.set_training(True)\n",
+    "        y_pred = self.forward(x)\n",
+    "        loss = self.compute_loss(y, y_pred)\n",
+    "        accuracy = self.compute_accuracy(y, y_pred)\n",
+    "        return loss, accuracy\n",
+    "    \n",
+    "    def evaluate(self, x: np.ndarray, y: np.ndarray, batch_size: int = 32) -> Tuple[float, float]:\n",
+    "        \"\"\"Evaluate model on test data\"\"\"\n",
+    "        self.set_training(False)\n",
+    "        total_loss = 0.0\n",
+    "        total_accuracy = 0.0\n",
+    "        num_batches = 0\n",
+    "        \n",
+    "        for i in range(0, len(x), batch_size):\n",
+    "            batch_x = x[i:i+batch_size]\n",
+    "            batch_y = y[i:i+batch_size]\n",
+    "            \n",
+    "            y_pred = self.forward(batch_x)\n",
+    "            loss = self.compute_loss(batch_y, y_pred)\n",
+    "            accuracy = self.compute_accuracy(batch_y, y_pred)\n",
+    "            \n",
+    "            total_loss += loss\n",
+    "            total_accuracy += accuracy\n",
+    "            num_batches += 1\n",
+    "        \n",
+    "        return total_loss / num_batches, total_accuracy / num_batches"
    ]
   },
   {
