--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -813,6 +813,14 @@
     "        \n",
     "        return total_loss / num_batches, total_accuracy / num_batches"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "077f7ff3",
+   "metadata": {},
+   "source": [
+    "# Still new to improve.... "
+   ]
   }
  ],
  "metadata": {
