feat:🤡  Make layer class

--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f2e250fa",
    "metadata": {},
    "outputs": [],
@@ -816,8 +816,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b8b3fbcb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Layer:\n",
+    "    def __init__(self):\n",
+    "        self.inp = None\n",
+    "        self.out = None\n",
+    "        \n",
+    "        \n",
+    "    def __call__(self, inp: np.ndarray)-> np.ndarray:\n",
+    "        return self.forward(inp)\n",
+    "    \n",
+    "    \n",
+    "    def forward(self, inp: np.ndarray)-> np.ndarray:\n",
+    "        raise NotImplementedError\n",
+    "    \n",
+    "    \n",
+    "    def backward(self, up_grad: np.ndarray)-> np.ndarray:\n",
+    "        raise NotImplementedError\n",
+    "    \n",
+    "    def step(self, lr: float)-> None:\n",
+    "        pass "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37a91d3f",
    "metadata": {},
    "outputs": [],
    "source": []
