--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "f2e250fa",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,10 @@
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
     "import os \n",
     "import pickle\n",
-    "from typing import Tuple, Optional"
+    "from typing import Tuple, Optional\n",
+    "from transformers import pipeline \n",
+    "import tqdm\n",
+    "import torch "
    ]
   },
   {
@@ -848,7 +851,12 @@
    "id": "37a91d3f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Linear(Layer):\n",
+    "    def __init__(self, in_dim: int, out_dim: int):\n",
+    "        super().__init__()\n",
+    "        self.w = 0.1 * np.random.randn(in_dim, out_dim)  "
+   ]
   }
  ],
  "metadata": {
