--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -199,25 +199,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d_2 (Conv2D)           (None, 26, 26, 32)        320       \n",
+      " conv2d (Conv2D)             (None, 26, 26, 32)        320       \n",
       "                                                                 \n",
-      " max_pooling2d_2 (MaxPooling  (None, 13, 13, 32)       0         \n",
+      " max_pooling2d (MaxPooling2D  (None, 13, 13, 32)       0         \n",
+      " )                                                               \n",
+      "                                                                 \n",
+      " conv2d_1 (Conv2D)           (None, 11, 11, 62)        17918     \n",
+      "                                                                 \n",
+      " max_pooling2d_1 (MaxPooling  (None, 5, 5, 62)         0         \n",
       " 2D)                                                             \n",
       "                                                                 \n",
-      " conv2d_3 (Conv2D)           (None, 11, 11, 62)        17918     \n",
+      " flatten (Flatten)           (None, 1550)              0         \n",
       "                                                                 \n",
-      " max_pooling2d_3 (MaxPooling  (None, 5, 5, 62)         0         \n",
-      " 2D)                                                             \n",
+      " dense (Dense)               (None, 128)               198528    \n",
       "                                                                 \n",
-      " flatten_1 (Flatten)         (None, 1550)              0         \n",
-      "                                                                 \n",
-      " dense_2 (Dense)             (None, 128)               198528    \n",
-      "                                                                 \n",
-      " dense_3 (Dense)             (None, 10)                1290      \n",
+      " dense_1 (Dense)             (None, 10)                1290      \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 218,056\n",
