feat:🔥 remove the file

--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "f2e250fa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.keras import layers, models, datasets\n",
@@ -17,7 +25,9 @@
     "from typing import Tuple, Optional\n",
     "from transformers import pipeline \n",
     "import tqdm\n",
-    "import torch "
+    "import torch \n",
+    "\n",
+    "print()"
    ]
   },
   {
