feat:🎉 chaneg the import package

--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "f2e250fa",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,8 @@
     "import tqdm\n",
     "import torch \n",
     "import warnings\n",
-    "import logging"
+    "import logging\n",
+    "from sklearn.base import BaseEstimator , TransformerMixin "
    ]
   },
   {
@@ -42,6 +43,62 @@
     "logger = logging.getLogger(__name__)\n",
     "SEED = 42\n",
     "np.random.seed(SEED)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a0e0914",
+   "metadata": {},
+   "source": [
+    "# Custom transformer for outlier clipping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "85db4d63",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'BaseEstimator' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mOutlierClipper\u001b[39;00m(\u001b[43mBaseEstimator\u001b[49m, TransformerMixin):\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, columns):\n\u001b[1;32m      3\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns \u001b[38;5;241m=\u001b[39m columns\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'BaseEstimator' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "class OutlierClipper(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, columns):\n",
+    "        self.columns = columns\n",
+    "        self.lower_bounds = {}\n",
+    "        self.upper_bounds = {}\n",
+    "    \n",
+    "    def fit(self, X, y=None):\n",
+    "        if isinstance(X, np.ndarray):\n",
+    "            X = pd.DataFrame(X, columns=self.columns)\n",
+    "        for col in self.columns:\n",
+    "            Q1 = X[col].quantile(0.25)\n",
+    "            Q3 = X[col].quantile(0.75)\n",
+    "            IQR = Q3 - Q1\n",
+    "            self.lower_bounds[col] = Q1 - 1.5 * IQR\n",
+    "            self.upper_bounds[col] = Q3 + 1.5 * IQR\n",
+    "        return self\n",
+    "    \n",
+    "    def transform(self, X, y=None):\n",
+    "        if isinstance(X, np.ndarray):\n",
+    "            X = pd.DataFrame(X, columns=self.columns)\n",
+    "        X_copy = X.copy()\n",
+    "        for col in self.columns:\n",
+    "            X_copy[col] = X_copy[col].clip(lower=self.lower_bounds[col], upper=self.upper_bounds[col])\n",
+    "        return X_copy\n",
+    "    \n",
+    "    def get_feature_names_out(self, input_features=None):\n",
+    "        return np.array(self.columns)"
    ]
   },
   {
