--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "f2e250fa",
    "metadata": {},
    "outputs": [],
@@ -19,6 +19,7 @@
     "import tqdm\n",
     "import torch \n",
     "import warnings\n",
+    "import pandas as pd \n",
     "import logging\n",
     "from sklearn.base import BaseEstimator , TransformerMixin "
    ]
